--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,8 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Teach
+    url: '#teach'
     weight: 20
   - name: Projects
     url: '#projects'
