--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -29,7 +29,7 @@ main:
     weight: 40
     parent: courses
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
   - name: Contact
     url: '#contact'
