--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -43,8 +43,9 @@ permalinks:
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
 disableAliases: true
+# headers, redirects
 outputs:
-  home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
+  home: [HTML, RSS, JSON, WebAppManifest ]
   section: [HTML, RSS]
 imaging:
   resampleFilter: lanczos
