--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -43,6 +43,7 @@ permalinks:
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
 disableAliases: true
+disableKinds:  ["taxonomy", "taxonomyTerm"]
 # headers, redirect
 outputs:
   home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
